2008-02-10  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:

	Track media position of currently selected renderer.

2008-02-09  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	- No need to strdup() udn for each callback as the callback can get
	  a const reference to udn from the service proxy, itself.
	- Fix the proxy (un)ref'ing.

2008-02-09  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:

	Add function to set the position of position hscale.

2008-02-09  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	Track media duration instead of track duration.

2008-02-08  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:

	Keep track of current track duration on each renderer, both in
	renderer treemodel and renderer control UI.

2008-02-04  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:

	Update the sensitivity of playback controls based on state of
	currently selected renderer.

2008-02-03  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	- Set the renderer combo insensitive when state is PLAYING or PAUSED
	  and viceversa.
	- A small cosmetic change.

2008-02-03  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* data/gupnp-av-cp.glade:
	* src/av-cp/playlist-treeview.c

	- Play selected item on playlist row activation.
	- Use glade for connecting all treeview signals.

2008-02-03  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:

	- get_selected_item() returns a boolean indicating success.
	- Set the renderer's state to STOPPED if a non-item is selected while
	  the renderer's state is set to PLAYING/PAUSED.
	- Mark MediaServer as container.